[gd_scene load_steps=8 format=3 uid="uid://dkgac0ulk8sg8"]

[ext_resource type="PhysicsMaterial" uid="uid://dq3f1rhyf4smn" path="res://new_physics_material.tres" id="1_fuxt3"]
[ext_resource type="Script" path="res://ball.gd" id="2_ndv27"]
[ext_resource type="Texture2D" uid="uid://b883ro5t6ftpd" path="res://path788.png" id="3_x0wk5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1bue"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8155k"]
radius = 3.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w0w0a"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:color")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:id")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:linear_velocity")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath(".:speed")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false

[sub_resource type="CircleShape2D" id="CircleShape2D_fawbw"]
radius = 8.0

[node name="Ball" type="RigidBody2D" groups=["ball"]]
collision_layer = 3
collision_mask = 3
physics_material_override = ExtResource("1_fuxt3")
continuous_cd = 2
max_contacts_reported = 10
contact_monitor = true
lock_rotation = true
script = ExtResource("2_ndv27")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_x0wk5")

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_x0wk5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h1bue")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8155k")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w0w0a")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_fawbw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
